--- a/thesis.tex
+++ b/thesis.tex
@@ -249,7 +249,7 @@ Dr. Christophe PALLIER & Doctoral advisor & Research Director\\& & INSERM/CEA/SA
 \cleardoublepage
 
 
-\part{The variable binding problem in the neuroscience of language}
+\part{The variable binding problem in Language Neuroscience}
 \cleardoublepage
 % Introducing the binding problem in all generality and the variable binding problem in specific.
 %\input{part_I/chapter_1.tex}
@@ -262,23 +262,23 @@ Dr. Christophe PALLIER & Doctoral advisor & Research Director\\& & INSERM/CEA/SA
 \FloatBarrier
 
 
-\part{Contribution -- Testing the superposition principle in two-syllable and two-digit representations}
+\part{Contribution -- fMRI -- Testing the superposition principle in two-syllabic representations}
 \cleardoublepage
 % Introduction to superposition principle and application to fMRI
-%\input{part_II/chapter_1.tex}
-%\FloatBarrier
-% Experimental design on both syllables and digits
-% \input{part_II/chapter_2.tex}
-%\FloatBarrier
-% Results and discussion on syllables
+\input{part_II/chapter_1.tex}
+\FloatBarrier
+% Experimental design
+\input{part_II/chapter_2.tex}
+\FloatBarrier
+% Results
 \input{part_II/chapter_3.tex}
 \FloatBarrier
-% Results and discussion on numbers
+% Discussion
 % \input{part_II/chapter_4.tex}
 %\FloatBarrier
 
 
-\part{Contribution -- Modelling NBA}
+\part{Contribution -- ECoG -- Exploring the neural temporal signatures of word binding}
 \cleardoublepage
 % Introduction
 % \input{part_III/chapter_1.tex}
@@ -294,7 +294,7 @@ Dr. Christophe PALLIER & Doctoral advisor & Research Director\\& & INSERM/CEA/SA
 %\FloatBarrier
 
 
-\part{Contribution -- Exploring the neural temporal signatures of word binding}
+\part{Contribution -- Modelling -- The neural dynamics of binding in language with the Neural Blackboard Architecture}
 \cleardoublepage
 % Introduction
 % \input{part_IV/chapter_1.tex}
